<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/colorLight"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="65dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="30dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:id="@+id/dialog_title"
                android:text="@string/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <CheckBox
                android:layout_marginTop="20dp"
                android:id="@+id/public_check_box"
                tools:checked="true"
                style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
                android:text="@string/dialog_check_box_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_submit"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/dialog_ok_button"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
